[gd_scene load_steps=4 format=3 uid="uid://l3svjm1bm6br"]

[ext_resource type="Script" path="res://Scenes/tictacktoe sidequest.gd" id="1_sssnx"]
[ext_resource type="Texture2D" uid="uid://d30g3krlj57w2" path="res://assets/Randomimages/square-xxl.png" id="2_68xe7"]
[ext_resource type="Texture2D" uid="uid://4ltlhsnxsv77" path="res://assets/Randomimages/greensquare.png" id="3_773ep"]

[node name="TictacktoeSidequest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_right = -4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sssnx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 552.0
offset_top = 233.0
offset_right = 592.0
offset_bottom = 273.0

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 100
theme_override_constants/v_separation = 100
columns = 3

[node name="TextureButton" type="TextureButton" parent="MarginContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("2_68xe7")
texture_hover = ExtResource("3_773ep")

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("2_68xe7")
texture_hover = ExtResource("3_773ep")

[node name="TextureButton3" type="TextureButton" parent="MarginContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("2_68xe7")
texture_hover = ExtResource("3_773ep")

[node name="TextureButton4" type="TextureButton" parent="MarginContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("2_68xe7")
texture_hover = ExtResource("3_773ep")

[node name="TextureButton5" type="TextureButton" parent="MarginContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("2_68xe7")
texture_hover = ExtResource("3_773ep")

[node name="TextureButton6" type="TextureButton" parent="MarginContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("2_68xe7")
texture_hover = ExtResource("3_773ep")

[node name="TextureButton7" type="TextureButton" parent="MarginContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("2_68xe7")
texture_hover = ExtResource("3_773ep")

[node name="TextureButton8" type="TextureButton" parent="MarginContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("2_68xe7")
texture_hover = ExtResource("3_773ep")

[node name="TextureButton9" type="TextureButton" parent="MarginContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("2_68xe7")
texture_hover = ExtResource("3_773ep")

[node name="Camera2D" type="Camera2D" parent="MarginContainer/GridContainer/TextureButton9"]
position = Vector2(-201, -222)
zoom = Vector2(0.5, 0.5)

[connection signal="pressed" from="MarginContainer/GridContainer/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/TextureButton2" to="." method="_on_texture_button_2_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/TextureButton3" to="." method="_on_texture_button_3_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/TextureButton4" to="." method="_on_texture_button_4_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/TextureButton5" to="." method="_on_texture_button_5_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/TextureButton6" to="." method="_on_texture_button_6_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/TextureButton7" to="." method="_on_texture_button_7_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/TextureButton8" to="." method="_on_texture_button_8_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/TextureButton9" to="." method="_on_texture_button_9_pressed"]
